// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiffHostingStack スナップショット dev 環境のテンプレートがスナップショットと一致する 1`] = `
{
  "Outputs": {
    "BucketArn": {
      "Description": "S3 Bucket ARN",
      "Export": {
        "Name": "memoru-dev-liff-bucket-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "LiffBucket20F10BB8",
          "Arn",
        ],
      },
    },
    "BucketName": {
      "Description": "S3 Bucket name for LIFF app",
      "Export": {
        "Name": "memoru-dev-liff-bucket",
      },
      "Value": {
        "Ref": "LiffBucket20F10BB8",
      },
    },
    "DeployCommand": {
      "Description": "Command to deploy LIFF app",
      "Value": {
        "Fn::Join": [
          "",
          [
            "aws s3 sync ./dist s3://",
            {
              "Ref": "LiffBucket20F10BB8",
            },
            " --delete && aws cloudfront create-invalidation --distribution-id ",
            {
              "Ref": "Distribution830FAC52",
            },
            " --paths "/*"",
          ],
        ],
      },
    },
    "DistributionDomainName": {
      "Description": "CloudFront Distribution Domain Name",
      "Export": {
        "Name": "memoru-dev-liff-distribution-domain",
      },
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "CloudFront Distribution ID",
      "Export": {
        "Name": "memoru-dev-liff-distribution-id",
      },
      "Value": {
        "Ref": "Distribution830FAC52",
      },
    },
    "LiffUrl": {
      "Description": "LIFF Application URL",
      "Export": {
        "Name": "memoru-dev-liff-url",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "Distribution830FAC52",
                "DomainName",
              ],
            },
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
              ],
              "CachePolicyId": {
                "Ref": "StaticAssetsCachePolicyA7AB90E0",
              },
              "CachedMethods": [
                "GET",
                "HEAD",
              ],
              "Compress": true,
              "PathPattern": "/assets/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersPolicyE1741D63",
              },
              "TargetOriginId": "TestLiffHostingStackDistributionOrigin1C94C73E4",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "CachedMethods": [
                "GET",
                "HEAD",
              ],
              "Compress": true,
              "PathPattern": "/index.html",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersPolicyE1741D63",
              },
              "TargetOriginId": "TestLiffHostingStackDistributionOrigin1C94C73E4",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "Memoru LIFF Distribution - dev",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "CachedMethods": [
              "GET",
              "HEAD",
            ],
            "Compress": true,
            "ResponseHeadersPolicyId": {
              "Ref": "SecurityHeadersPolicyE1741D63",
            },
            "TargetOriginId": "TestLiffHostingStackDistributionOrigin1C94C73E4",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "LiffBucket20F10BB8",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestLiffHostingStackDistributionOrigin1C94C73E4",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "DistributionOrigin1S3OriginAccessControlEB606076",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "PriceClass": "PriceClass_200",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionOrigin1S3OriginAccessControlEB606076": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "TestLiffHostingStackDistribuOrigin1S3OriginAccessControl02D2C1AA",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "LiffBucket20F10BB8": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": {
          "Fn::Join": [
            "",
            [
              "memoru-liff-dev-",
              {
                "Ref": "AWS::AccountId",
              },
            ],
          ],
        },
        "CorsConfiguration": {
          "CorsRules": [
            {
              "AllowedHeaders": [
                "*",
              ],
              "AllowedMethods": [
                "GET",
                "HEAD",
              ],
              "AllowedOrigins": [
                "*",
              ],
              "MaxAge": 3600,
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "Id": "DeleteOldVersions",
              "NoncurrentVersionExpiration": {
                "NoncurrentDays": 30,
              },
              "Status": "Enabled",
            },
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUpload",
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "LiffBucketPolicyC17DBA44": {
      "Properties": {
        "Bucket": {
          "Ref": "LiffBucket20F10BB8",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "Distribution830FAC52",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "LiffBucket20F10BB8",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "SecurityHeadersPolicyE1741D63": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Name": "memoru-liff-security-headers-dev",
          "SecurityHeadersConfig": {
            "ContentSecurityPolicy": {
              "ContentSecurityPolicy": "default-src 'self'; script-src 'self' 'unsafe-inline' https://static.line-scdn.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: blob:; font-src 'self' data:; connect-src 'self' https://api.line.me https://access.line.me; frame-ancestors 'self' https://liff.line.me",
              "Override": true,
            },
            "ContentTypeOptions": {
              "Override": true,
            },
            "ReferrerPolicy": {
              "Override": true,
              "ReferrerPolicy": "strict-origin-when-cross-origin",
            },
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 31536000,
              "IncludeSubdomains": true,
              "Override": true,
              "Preload": true,
            },
            "XSSProtection": {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "StaticAssetsCachePolicyA7AB90E0": {
      "Properties": {
        "CachePolicyConfig": {
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 0,
          "Name": "memoru-liff-static-dev",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "none",
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "none",
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`LiffHostingStack スナップショット prod 環境のテンプレートがスナップショットと一致する 1`] = `
{
  "Mappings": {
    "AWSCloudFrontPartitionHostedZoneIdMap": {
      "aws": {
        "zoneId": "Z2FDTNDATAQYW2",
      },
      "aws-cn": {
        "zoneId": "Z3RFFRIM2A3IF5",
      },
    },
  },
  "Outputs": {
    "BucketArn": {
      "Description": "S3 Bucket ARN",
      "Export": {
        "Name": "memoru-prod-liff-bucket-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "LiffBucket20F10BB8",
          "Arn",
        ],
      },
    },
    "BucketName": {
      "Description": "S3 Bucket name for LIFF app",
      "Export": {
        "Name": "memoru-prod-liff-bucket",
      },
      "Value": {
        "Ref": "LiffBucket20F10BB8",
      },
    },
    "DeployCommand": {
      "Description": "Command to deploy LIFF app",
      "Value": {
        "Fn::Join": [
          "",
          [
            "aws s3 sync ./dist s3://",
            {
              "Ref": "LiffBucket20F10BB8",
            },
            " --delete && aws cloudfront create-invalidation --distribution-id ",
            {
              "Ref": "Distribution830FAC52",
            },
            " --paths "/*"",
          ],
        ],
      },
    },
    "DistributionDomainName": {
      "Description": "CloudFront Distribution Domain Name",
      "Export": {
        "Name": "memoru-prod-liff-distribution-domain",
      },
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "CloudFront Distribution ID",
      "Export": {
        "Name": "memoru-prod-liff-distribution-id",
      },
      "Value": {
        "Ref": "Distribution830FAC52",
      },
    },
    "LiffUrl": {
      "Description": "LIFF Application URL",
      "Export": {
        "Name": "memoru-prod-liff-url",
      },
      "Value": "https://app.example.com",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DNSRecord4A9429C1": {
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "Distribution830FAC52",
              "DomainName",
            ],
          },
          "HostedZoneId": {
            "Fn::FindInMap": [
              "AWSCloudFrontPartitionHostedZoneIdMap",
              {
                "Ref": "AWS::Partition",
              },
              "zoneId",
            ],
          },
        },
        "HostedZoneId": "Z0123456789ABCDEF",
        "Name": "app.example.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "app.example.com",
          ],
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
              ],
              "CachePolicyId": {
                "Ref": "StaticAssetsCachePolicyA7AB90E0",
              },
              "CachedMethods": [
                "GET",
                "HEAD",
              ],
              "Compress": true,
              "PathPattern": "/assets/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersPolicyE1741D63",
              },
              "TargetOriginId": "TestLiffHostingStackDistributionOrigin1C94C73E4",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "CachedMethods": [
                "GET",
                "HEAD",
              ],
              "Compress": true,
              "PathPattern": "/index.html",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersPolicyE1741D63",
              },
              "TargetOriginId": "TestLiffHostingStackDistributionOrigin1C94C73E4",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "Memoru LIFF Distribution - prod",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "CachedMethods": [
              "GET",
              "HEAD",
            ],
            "Compress": true,
            "ResponseHeadersPolicyId": {
              "Ref": "SecurityHeadersPolicyE1741D63",
            },
            "TargetOriginId": "TestLiffHostingStackDistributionOrigin1C94C73E4",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": true,
          "Logging": {
            "Bucket": {
              "Fn::GetAtt": [
                "LogBucketCC3B17E8",
                "RegionalDomainName",
              ],
            },
            "IncludeCookies": false,
            "Prefix": "cloudfront/",
          },
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "LiffBucket20F10BB8",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestLiffHostingStackDistributionOrigin1C94C73E4",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "DistributionOrigin1S3OriginAccessControlEB606076",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "PriceClass": "PriceClass_200",
          "ViewerCertificate": {
            "AcmCertificateArn": "arn:aws:acm:us-east-1:123456789012:certificate/test-cert",
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionOrigin1S3OriginAccessControlEB606076": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "TestLiffHostingStackDistribuOrigin1S3OriginAccessControl02D2C1AA",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "LiffBucket20F10BB8": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": {
          "Fn::Join": [
            "",
            [
              "memoru-liff-prod-",
              {
                "Ref": "AWS::AccountId",
              },
            ],
          ],
        },
        "CorsConfiguration": {
          "CorsRules": [
            {
              "AllowedHeaders": [
                "*",
              ],
              "AllowedMethods": [
                "GET",
                "HEAD",
              ],
              "AllowedOrigins": [
                "https://app.example.com",
              ],
              "MaxAge": 3600,
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "Id": "DeleteOldVersions",
              "NoncurrentVersionExpiration": {
                "NoncurrentDays": 30,
              },
              "Status": "Enabled",
            },
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUpload",
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "LiffBucketPolicyC17DBA44": {
      "Properties": {
        "Bucket": {
          "Ref": "LiffBucket20F10BB8",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "Distribution830FAC52",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "LiffBucket20F10BB8",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "LogBucketCC3B17E8": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": {
          "Fn::Join": [
            "",
            [
              "memoru-logs-prod-",
              {
                "Ref": "AWS::AccountId",
              },
            ],
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Id": "DeleteOldLogs",
              "Status": "Enabled",
            },
          ],
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerPreferred",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "SecurityHeadersPolicyE1741D63": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Name": "memoru-liff-security-headers-prod",
          "SecurityHeadersConfig": {
            "ContentSecurityPolicy": {
              "ContentSecurityPolicy": "default-src 'self'; script-src 'self' 'unsafe-inline' https://static.line-scdn.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: blob:; font-src 'self' data:; connect-src 'self' https://api.line.me https://access.line.me; frame-ancestors 'self' https://liff.line.me",
              "Override": true,
            },
            "ContentTypeOptions": {
              "Override": true,
            },
            "ReferrerPolicy": {
              "Override": true,
              "ReferrerPolicy": "strict-origin-when-cross-origin",
            },
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 31536000,
              "IncludeSubdomains": true,
              "Override": true,
              "Preload": true,
            },
            "XSSProtection": {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "StaticAssetsCachePolicyA7AB90E0": {
      "Properties": {
        "CachePolicyConfig": {
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 0,
          "Name": "memoru-liff-static-prod",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "none",
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "none",
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
